--- a/templates/index.html
+++ b/templates/index.html
@@ -2,41 +2,58 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Wind speed calculation</title>
+
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-    <link rel="stylesheet" href="/resources/demos/style.css">
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script type="text/javascript" src="/static/js/jquery.ui.datepicker-ru.js"></script>
     <script>
+    $.datepicker.setDefaults(
+        $.extend(
+            {'dateFormat':'dd.mm.yy'},
+            $.datepicker.regional['ru']
+        )
+    );
     $( function() {
-        var dateFormat = "mm/dd/yy", 
+        var dateFormat = "dd.mm.yy",
         from = $( "#from" )
         .datepicker({
+            dateFormat: "dd.mm.yy",
             defaultDate: "+1w",
             minDate: null,
             maxDate: "d",
             changeMonth: true,
             changeYear: true,
-            numberOfMonths: 1
+            numberOfMonths: 1,
+            showOn: "both",
+            buttonImage: "/static/img/glyphicons-46-calendar.png",
+            buttonImageOnly: true,
+            buttonText: "Выберите дату"
         })
         .on( "change", function() {
             to.datepicker( "option", "minDate", getDate( this ) );
         }),
         to = $( "#to" )
         .datepicker({
+            dateFormat: "dd.mm.yy",
             defaultDate: "+1w",
             minDate: null,
             maxDate: "d",
             changeMonth: true,
             changeYear: true,
-            numberOfMonths: 1
+            numberOfMonths: 1,
+            showOn: "both",
+            buttonImage: "/static/img/glyphicons-46-calendar.png",
+            buttonImageOnly: true,
+            buttonText: "Выберите дату"
         })
         .on( "change", function() {
             from.datepicker( "option", "maxDate", getDate( this ) );
-        }),
-        month = $( "#month" )
-        ;
+        });
 
         function getDate( element ) {
             var date;
@@ -51,29 +68,53 @@
     });
     </script>
 </head>
-<body>
-    <p><b>Введите идентификатор метеостанции:</b></p>
-    <p>ID: <input type="text" id="weather_station" name="weather_station"></p>
-    <p><b>Данные за период:</b></p>
-    <label for="from">С</label>
-    <input type="text" id="from" name="from">
-    <label for="to">по</label>
-    <input type="text" id="to" name="to">
-    <p><b>Данные за:</b></p>
-    <select>
-        <option>все дни в периоде</option>
-        <option>Январь</option>
-        <option>Февраль</option>
-        <option>Март</option>
-        <option>Апрель</option>
-        <option>Май</option>
-        <option>Июнь</option>
-        <option>Июль</option>
-        <option>Август</option>
-        <option>Сентябрь</option>
-        <option>Октябрь</option>
-        <option>Ноябрь</option>
-        <option>Декабрь</option>
-    </select>
-</body>
+    <body>
+        <nav class="navbar navbar-default">
+            <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand">Wind speed calculation</a>
+            </div>
+            </div>
+        </nav>
+
+        <div class="container-fluid">
+        <div class="page-header">
+            <h5>Введите идентификатор метеостанции:</h5>
+            <p>ID:&nbsp;<input type="text" id="weather_station" name="weather_station"></p>
+        </div>
+        <div class="page-header">
+            <h5>Данные за период:</h5>
+            <p><label for="from">с&nbsp;</label>
+            <input type="text" id="from" name="from">
+            <label for="to">&nbsp;&nbsp;&nbsp;&nbsp;по&nbsp;</label>
+            <input type="text" id="to"   name="to"></p>
+            за&nbsp;
+            <select>
+                <option>все дни в периоде</option>
+                <option>Январь</option>
+                <option>Февраль</option>
+                <option>Март</option>
+                <option>Апрель</option>
+                <option>Май</option>
+                <option>Июнь</option>
+                <option>Июль</option>
+                <option>Август</option>
+                <option>Сентябрь</option>
+                <option>Октябрь</option>
+                <option>Ноябрь</option>
+                <option>Декабрь</option>
+            </select>
+        </div>
+        <div class="page-header">
+            <h5>Выберите вероятность скорости ветра:</h5>
+            <p><input type="text"></p>
+        </div>
+        <div class="page-header">
+            <h5>Коэффициент 1:</h5>
+            <p><input type="text"></p>
+            <h5>Коэффициент 2:</h5>
+            <p><input type="text"></p>
+        </div>
+        </div>
+    </body>
 </html>
