--- a/templates/calculate.html
+++ b/templates/calculate.html
@@ -21,5 +21,8 @@
         <div>
             {{ velocity_table.to_html(classes="table")|safe }}
         </div>
+        <div>
+            {{ result_direction_speed.to_html(classes="table")|safe }}
+        </div>
     </body>
 </html>
