Added the recurrence input to the interface and made days number calculation

--- a/templates/index.html
+++ b/templates/index.html
@@ -106,8 +106,8 @@
             </select>
         </div>
         <div class="page-header">
-            <h5>Выберите вероятность скорости ветра:</h5>
-            <p><input type="text" name="speed_prob" id="speed_prob" /></p>
+            <h5>Введите повторяемость скорости ветра:</h5>
+            <p><input type="text" name="storm_recurrence" id="storm_recurrence" /></p>
         </div>
         <div class="page-header">
             <h5>Коэффициент 1:</h5>
