--- a/templates/index.html
+++ b/templates/index.html
@@ -91,7 +91,7 @@
         </div>
         <div class="page-header">
             <h5>Выберите вероятность скорости ветра:</h5>
-            <p><input type="text" name="speed_prob" id="speed_prob" /></p>
+            <p><input type="text" name="speed_prob" id="speed_prob" required /></p>
         </div>
         <input type="submit" class="btn btn-default" value="Рассчитать"/>
         </div>
