--- a/templates/calculate.html
+++ b/templates/calculate.html
@@ -17,8 +17,8 @@
         </nav>
 
         <p style="margin-left: 15px; line-height: 3; font-size: 16px;">
-            Расчет составлен для метостанции с  WMO ID {{ station_id }} за период с {{ start_date.strftime('%d.%m.%Y')}}
-            по {{ end_date.strftime('%d.%m.%Y') }}.
+            Расчет составлен для метостанции с  WMO ID {{ station_id }}
+            за период с {{ start_date.strftime('%d.%m.%Y')}} по {{ end_date.strftime('%d.%m.%Y') }}.
         </p>
 
         <h2 style="margin-left: 15px;">Режимные функции скорости ветра</h2>
