--- a/templates/calculate.html
+++ b/templates/calculate.html
@@ -17,7 +17,7 @@
         </nav>
 
         <p style="margin-left: 15px; line-height: 3; font-size: 16px;">
-            Расчет составлен для метостанции с  WMO ID {{ station_id }}
+            Расчет сделан для метеостанции с WMO ID {{ station_id }}
             за период с {{ start_date.strftime('%d.%m.%Y')}} по {{ end_date.strftime('%d.%m.%Y') }}.
         </p>
 
@@ -26,12 +26,25 @@
             <img style="max-width: 50%;" src="data:image/png;base64,{{ image }}" />
         </div>
 
+        <h2 style="margin-left: 15px;">Расшифровка легенды рисунка</h2>
+        <div style="margin-left: 15px;">
+            <table class="table">
+                {% for key, value in legend_decoding_dict.items() %}
+                  <tr>
+                     <th> {{ key }} </th>
+                     <td> {{ value }} </td>
+                  </tr>
+                {% endfor %}
+            </table>
+        </div>
+
         <h2 style="margin-left: 15px;">Продолжительность градаций ветра по каждому румбу, %</h2>
         <div style="margin-left: 15px;">
             {{ velocity_table.to_html(classes="table")|safe }}
         </div>
 
-        <h2 style="margin-left: 15px;">Расчетные скорости ветра по каждому румбу, м/с</h2>
+        <h2 style="margin-left: 15px;">Расчётные скорости ветра по каждому румбу повторяемостью 1 раз в
+            {{ storm_recurrence }} лет, м/с</h2>
         <div style="margin-left: 15px;">
             <table class="table">
                 {% for key, value in result_direction_speed.items() %}
