--- a/templates/index.html
+++ b/templates/index.html
@@ -4,69 +4,16 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>Wind speed calculation</title>
 
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/static/css/my_styles.css" />
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script type="text/javascript" src="/static/js/jquery.ui.datepicker-ru.js"></script>
-    <script>
-    $.datepicker.setDefaults(
-        $.extend(
-            {'dateFormat':'dd.mm.yy'},
-            $.datepicker.regional['ru']
-        )
-    );
-    $( function() {
-        var dateFormat = "dd.mm.yy",
-        from = $( "#from" )
-        .datepicker({
-            dateFormat: "dd.mm.yy",
-            defaultDate: "+1w",
-            minDate: null,
-            maxDate: "d",
-            changeMonth: true,
-            changeYear: true,
-            numberOfMonths: 1,
-            showOn: "both",
-            buttonImage: "/static/img/glyphicons-46-calendar.png",
-            buttonImageOnly: true,
-            buttonText: "Выберите дату"
-        })
-        .on( "change", function() {
-            to.datepicker( "option", "minDate", getDate( this ) );
-        }),
-        to = $( "#to" )
-        .datepicker({
-            dateFormat: "dd.mm.yy",
-            defaultDate: "+1w",
-            minDate: null,
-            maxDate: "d",
-            changeMonth: true,
-            changeYear: true,
-            numberOfMonths: 1,
-            showOn: "both",
-            buttonImage: "/static/img/glyphicons-46-calendar.png",
-            buttonImageOnly: true,
-            buttonText: "Выберите дату"
-        })
-        .on( "change", function() {
-            from.datepicker( "option", "maxDate", getDate( this ) );
-        });
-
-        function getDate( element ) {
-            var date;
-            try {
-                date = $.datepicker.parseDate( dateFormat, element.value );
-            } catch( error ) {
-                date = null;
-            }
-
-            return date;
-        }
-    });
-    </script>
+    <script src="/static/js/datepicker.js"></script>
 </head>
     <body>
         <nav class="navbar navbar-default">
@@ -82,11 +29,50 @@
             <input type="text" placeholder="WMO ID" id="station_id" name="station_id" required />
         </div>
         <div class="page-header" style="margin-left: 15px;">
-            <h5>Данные за период:</h5>
+            <h5>Диапазон дат:</h5>
             <label for="from"></label>
             <input type="text" style="margin-left: -5px;" placeholder="с" id="from" name="from" required />
             <label for="to"></label>
             <input type="text" placeholder="по" id="to" name="to" required />
+        </div>
+        <label class="radio-inline" style="margin-left: 15px;"><input type="radio" name="optradio"
+                                                                      checked>Все дни</label>
+        <label class="radio-inline" style="margin-left: 15px;"><input type="radio" name="optradio">Месяц(ы)</label>
+        <div class="checkbox">
+          <label><input type="checkbox" value="">Январь</label>
+        </div>
+        <div class="checkbox">
+          <label><input type="checkbox" value="">Февраль</label>
+        </div>
+        <div class="checkbox">
+          <label><input type="checkbox" value="">Март</label>
+        </div>
+        <div class="checkbox">
+          <label><input type="checkbox" value="">Апрель</label>
+        </div>
+        <div class="checkbox">
+          <label><input type="checkbox" value="">Май</label>
+        </div>
+        <div class="checkbox">
+          <label><input type="checkbox" value="">Июнь</label>
+        </div>
+        <div class="checkbox">
+          <label><input type="checkbox" value="">Июль</label>
+        </div>
+        <div class="checkbox">
+          <label><input type="checkbox" value="">Август</label>
+        </div>
+        <div class="checkbox">
+          <label><input type="checkbox" value="">Сентябрь</label>
+        </div>
+        <div class="checkbox">
+          <label><input type="checkbox" value="">Октябрь</label>
+        </div>
+        <div class="checkbox">
+          <label><input type="checkbox" value="">Ноябрь</label>
+        </div>
+        <div class="checkbox">
+          <label><input type="checkbox" value="">Декабрь</label>
         </div>
         <div class="page-header" style="margin-left: 15px;">
             <h5>Введите повторяемость скорости ветра, <i>лет:</i></h5>
