Pass radio button value to web.py

--- a/templates/index.html
+++ b/templates/index.html
@@ -37,9 +37,12 @@
             <label for="to"></label>
             <input type="text" placeholder="по" id="to" name="to" required />
         </div>
-        <label class="radio-inline all_days" style="margin-left: 15px;"><input type="radio" name="optradio"
-                                                                      checked>Все дни</label>
-        <label class="radio-inline month" style="margin-left: 15px;"><input type="radio" name="optradio">Месяц(ы)</label>
+        <label class="radio-inline all_days" style="margin-left: 15px;">
+                                                        <input type="radio" name="optradio"
+                                                               id="all_days" checked value="all_days">Все дни</label>
+        <label class="radio-inline month" style="margin-left: 15px;">
+                                                        <input type="radio" name="optradio"
+                                                               id="month" value="month">Месяц(ы)</label>
         <div class="checkbox">
           <label><input type="checkbox" disabled value="">Январь</label>
         </div>
