--- a/templates/index.html
+++ b/templates/index.html
@@ -27,6 +27,12 @@
         </nav>
         <form action="/calculate" method="POST">
         <div class="page-header" style="margin-left: 15px;">
+            <h5>Эта программа рассчитывает скорость ветра определённой вероятности превышения по каждому румбу.<br>
+             Расчёт проводится по методике, описанной в в приложении 12.1 Пособия к СНиП 2.05.03-84 "Мосты и трубы"
+             (ПМП-91).<br>
+             Исходный код программы находится <a href="https://github.com/AndreyAD1/wind-speed-calculation">здесь</a>.
+            </h5>
+        <div class="page-header" style="margin-left: 15px;">
             <h5>Введите идентификатор метеостанции:</h5>
             <input type="text" placeholder="WMO ID" id="station_id" name="station_id" required />
         </div>
@@ -44,16 +50,16 @@
                                                         <input type="radio" name="optradio"
                                                                id="month" value="month">Месяц(ы)</label>
         <div class="checkbox">
-          <label><input type="checkbox" disabled value="">Январь</label>
+          <label><input type="checkbox" disabled name="1">Январь</label>
         </div>
         <div class="checkbox">
-          <label><input type="checkbox" disabled value="">Февраль</label>
+          <label><input type="checkbox" disabled name="2">Февраль</label>
         </div>
         <div class="checkbox">
-          <label><input type="checkbox" disabled value="">Март</label>
+          <label><input type="checkbox" disabled name="3">Март</label>
         </div>
         <div class="checkbox">
-          <label><input type="checkbox" disabled value="">Апрель</label>
+          <label><input type="checkbox" disabled  name="4">Апрель</label>
         </div>
         <div class="checkbox">
           <label><input type="checkbox" disabled value="">Май</label>
@@ -81,8 +87,8 @@
         </div>
 
         <div class="page-header" style="margin-left: 15px;">
-            <h5>Введите повторяемость скорости ветра, <i>лет:</i></h5>
-            <input type="number" placeholder="1.0" min="1" step="0.1" style="width: 150px"
+            <h5>Введите обеспеченность скорости ветра, <i>%:</i></h5>
+            <input type="number" placeholder="1.0" min="0" max="100" step="0.01" style="width: 150px"
                    id="storm_recurrence" name="storm_recurrence" required />
         </div>
         <input type="submit" style="margin-left: 15px;" class="btn btn-default" value="Рассчитать"/>
