--- a/templates/index.html
+++ b/templates/index.html
@@ -18,6 +18,31 @@
             $.datepicker.regional['ru']
         )
     );
+    $(function() {
+	$("#station_id").autocomplete({
+	    source: function (request, response) {
+	         $.ajax({
+	             url: "/suggest",
+	             type: "GET",
+	             data: request,
+                     dataType: "JSON",
+                     minLength: 1,
+	             success: function (data) {
+	                 response($.map(data, function (el) {
+	                     return {
+	                         label: el.name,
+	                         value: el.id
+	                     };
+	                 }));
+	             }
+	         });
+	    },
+	    select: function (event, ui) {
+	        this.value = ui.item.value;
+	        event.preventDefault();
+	    }
+	});
+    });
     $( function() {
         var dateFormat = "dd.mm.yy",
         from = $( "#from" )
@@ -70,30 +95,33 @@
 </head>
     <body>
         <nav class="navbar navbar-default">
-            <div class="container-fluid">
             <div class="navbar-header">
                 <a class="navbar-brand" href="/">Wind speed calculation</a>
             </div>
-            </div>
         </nav>
+
         <form action="/calculate" method="POST">
-        <div class="page-header" style="margin-left: 15px;">
-            <h5>Введите идентификатор метеостанции:</h5>
-            <input type="text" placeholder="WMO ID" id="station_id" name="station_id" required />
-        </div>
-        <div class="page-header" style="margin-left: 15px;">
-            <h5>Данные за период:</h5>
-            <label for="from"></label>
-            <input type="text" style="margin-left: -5px;" placeholder="с" id="from" name="from" required />
-            <label for="to"></label>
-            <input type="text" placeholder="по" id="to" name="to" required />
-        </div>
-        <div class="page-header" style="margin-left: 15px;">
-            <h5>Введите повторяемость скорости ветра, <i>лет:</i></h5>
-            <input type="number" placeholder="1.0" min="1" step="0.1" style="width: 150px"
-                   id="storm_recurrence" name="storm_recurrence" required />
-        </div>
-        <input type="submit" style="margin-left: 15px;" class="btn btn-default" value="Рассчитать"/>
+            <div class="page-header" style="margin-left: 15px;">
+                <h5>Введите идентификатор метеостанции:</h5>
+                <input type="text" placeholder="WMO ID" id="station_id" name="station_id" required />
+            </div>
+
+            <div class="page-header" style="margin-left: 15px;">
+                <h5>Данные за период:</h5>
+                <label for="from"></label>
+                <input type="text" style="margin-left: -5px;" placeholder="с" id="from" name="from" required />
+                <label for="to"></label>
+                <input type="text" placeholder="по" id="to" name="to" required />
+            </div>
+
+            <div class="page-header" style="margin-left: 15px;">
+                <h5>Введите повторяемость скорости ветра, <i>лет:</i></h5>
+                <input type="number" placeholder="1.0" min="1" step="0.1" style="width: 150px"
+                       id="storm_recurrence" name="storm_recurrence" required />
+            </div>
+
+            <input type="submit" style="margin-left: 15px;" class="btn btn-default" value="Рассчитать"/>
         </form>
+
     </body>
 </html>
