--- a/templates/index.html
+++ b/templates/index.html
@@ -59,31 +59,31 @@
           <label><input type="checkbox" disabled name="3">Март</label>
         </div>
         <div class="checkbox">
-          <label><input type="checkbox" disabled  name="4">Апрель</label>
+          <label><input type="checkbox" disabled name="4">Апрель</label>
         </div>
         <div class="checkbox">
-          <label><input type="checkbox" disabled value="">Май</label>
+          <label><input type="checkbox" disabled name="5">Май</label>
         </div>
         <div class="checkbox">
-          <label><input type="checkbox" disabled value="">Июнь</label>
+          <label><input type="checkbox" disabled name="6">Июнь</label>
         </div>
         <div class="checkbox">
-          <label><input type="checkbox" disabled value="">Июль</label>
+          <label><input type="checkbox" disabled name="7">Июль</label>
         </div>
         <div class="checkbox">
-          <label><input type="checkbox" disabled value="">Август</label>
+          <label><input type="checkbox" disabled name="8">Август</label>
         </div>
         <div class="checkbox">
-          <label><input type="checkbox" disabled value="">Сентябрь</label>
+          <label><input type="checkbox" disabled name="9">Сентябрь</label>
         </div>
         <div class="checkbox">
-          <label><input type="checkbox" disabled value="">Октябрь</label>
+          <label><input type="checkbox" disabled name="10">Октябрь</label>
         </div>
         <div class="checkbox">
-          <label><input type="checkbox" disabled value="">Ноябрь</label>
+          <label><input type="checkbox" disabled name="11">Ноябрь</label>
         </div>
         <div class="checkbox">
-          <label><input type="checkbox" disabled value="">Декабрь</label>
+          <label><input type="checkbox" disabled name="12">Декабрь</label>
         </div>
 
         <div class="page-header" style="margin-left: 15px;">
