--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,7 @@
     <script src="/static/js/datepicker.js"></script>
     <script src="/static/js/deactivate_checkboxes.js"></script>
     <script src="/static/js/activate_checkboxes.js"></script>
+    <script src="/static/js/autocomplete.js"></script>
 
 </head>
     <body>
