Complete the function of month selection

--- a/templates/calculate.html
+++ b/templates/calculate.html
@@ -16,7 +16,8 @@
 
         <p style="margin-left: 15px; line-height: 3; font-size: 16px;">
             Расчет сделан для метеостанции с ID <b>{{ station_id }}</b>
-            за период с {{ start_date.strftime('%d.%m.%Y')}} по {{ end_date.strftime('%d.%m.%Y') }}.
+            за период с {{ start_date.strftime('%d.%m.%Y')}} по {{ end_date.strftime('%d.%m.%Y') }}
+            за месяцы №{{ selected_months }}.
         </p>
 
         <h2 style="margin-left: 15px;">Режимные функции скорости ветра</h2>
