--- a/templates/index.html
+++ b/templates/index.html
@@ -32,6 +32,7 @@
                  (ПМП-91).<br>
                  Исходный код программы находится <a href="https://github.com/AndreyAD1/wind-speed-calculation">здесь</a>.
                 </h5>
+            </div>
             <div class="page-header" style="margin-left: 15px;">
                  <h5>Введите идентификатор метеостанции:</h5>
                  <input type="text" placeholder="WMO ID" id="station_id" name="station_id" required />
