Fix the possible range of storm probability values

--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,8 @@
                 <h5>Эта программа рассчитывает скорость ветра определённой вероятности превышения по каждому румбу.<br>
                  Расчёт проводится по методике, описанной в в приложении 12.1 Пособия к СНиП 2.05.03-84 "Мосты и трубы"
                  (ПМП-91).<br>
-                 Исходный код программы находится <a href="https://github.com/AndreyAD1/wind-speed-calculation">здесь</a>.
+                 Исходный код программы находится
+                    <a href="https://github.com/AndreyAD1/wind-speed-calculation">здесь</a>.
                 </h5>
             </div>
             <div class="page-header" style="margin-left: 15px;">
@@ -47,7 +48,8 @@
             </div>
             <label class="radio-inline all_days" style="margin-left: 15px;">
                                                             <input type="radio" name="optradio"
-                                                                   id="all_days" checked value="all_days">Все дни</label>
+                                                                   id="all_days" checked
+                                                                   value="all_days">Все дни</label>
             <label class="radio-inline month" style="margin-left: 15px;">
                                                             <input type="radio" name="optradio"
                                                                    id="month" value="month">Месяц(ы)</label>
@@ -90,7 +92,7 @@
 
             <div class="page-header" style="margin-left: 15px;">
                 <h5>Введите обеспеченность скорости ветра, <i>%:</i></h5>
-                <input type="number" placeholder="1.0" min="0" max="100" step="0.01" style="width: 150px"
+                <input type="number" placeholder="1.0" min="0.01" max="100" step="0.01" style="width: 150px"
                        id="storm_recurrence" name="storm_recurrence" required />
             </div>
             <input type="submit" style="margin-left: 15px;" class="btn btn-default" value="Рассчитать"/>
