Add the additional description on the main page

--- a/templates/index.html
+++ b/templates/index.html
@@ -27,10 +27,12 @@
 
         <form action="/calculate" method="POST">
             <div class="page-header" style="margin-left: 15px;">
-                <h5>Эта программа рассчитывает скорость ветра определённой вероятности превышения по каждому румбу.<br>
-                 Расчёт проводится по методике, описанной в в приложении 12.1 Пособия к СНиП 2.05.03-84 "Мосты и трубы"
-                 (ПМП-91).<br>
-                 Исходный код программы находится
+                <h5>Эта программа рассчитывает скорость ветра определённой вероятности превышения
+                    по каждому румбу.<br>
+                    Расчёт проводится по методике, описанной в приложении 12.1
+                    Пособия к СНиП 2.05.03-84 "Мосты и трубы" (ПМП-91),<br>
+                    без приведения скорости ветра к условиям водной поверхности (см. формулу 12.2 ПМП-91).<br>
+                    Исходный код программы находится
                     <a href="https://github.com/AndreyAD1/wind-speed-calculation">здесь</a>.
                 </h5>
             </div>
