On the main page change the word "program" to "application".

--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
 
         <form action="/calculate" method="POST">
             <div class="page-header" style="margin-left: 15px;">
-                <h5>Эта программа рассчитывает скорость ветра определённой вероятности превышения
+                <h5>Это приложение рассчитывает скорость ветра определённой вероятности превышения
                     по каждому румбу.<br>
                     Расчёт проводится по методике, описанной в приложении 12.1
                     Пособия к СНиП 2.05.03-84 "Мосты и трубы" (ПМП-91),<br>
