Note rp5.ru on the main page.

--- a/templates/index.html
+++ b/templates/index.html
@@ -32,6 +32,8 @@
                     Расчёт проводится по методике, описанной в приложении 12.1
                     Пособия к СНиП 2.05.03-84 "Мосты и трубы" (ПМП-91),<br>
                     без приведения скорости ветра к условиям водной поверхности (см. формулу 12.2 ПМП-91).<br>
+                    Для расчёта используются данные срочных наблюдений на метеостанциях, предоставляемые сайтом
+                    <a href="https://rp5.ru/">www.rp5.ru</a>.<br>
                     Исходный код программы находится
                     <a href="https://github.com/AndreyAD1/wind-speed-calculation">здесь</a>.
                 </h5>
