Fix bug in database

--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
 
         <form action="/calculate" method="POST">
             <div class="page-header" style="margin-left: 15px;">
-                <h5>Это приложение рассчитывает скорость ветра определённой вероятности превышения
+                <p>Это приложение рассчитывает скорость ветра определённой вероятности превышения
                     по каждому румбу.<br>
                     Расчёт проводится по методике, описанной в приложении 12.1
                     Пособия к СНиП 2.05.03-84 "Мосты и трубы" (ПМП-91),<br>
@@ -36,7 +36,7 @@
                     <a href="https://rp5.ru/">www.rp5.ru</a>.<br>
                     Исходный код программы находится
                     <a href="https://github.com/AndreyAD1/wind-speed-calculation">здесь</a>.
-                </h5>
+                </p>
             </div>
             <div class="page-header" style="margin-left: 15px;">
                  <h5>Введите идентификатор метеостанции:</h5>
@@ -99,7 +99,7 @@
                 <input type="number" placeholder="1.0" min="0.01" max="100" step="0.01" style="width: 150px"
                        id="storm_recurrence" name="storm_recurrence" required />
             </div>
-            <input type="submit" style="margin-left: 15px;" class="btn btn-default" value="Рассчитать"/>
+            <input type="submit" style="margin-left: 15px; margin-bottom: 50px;" class="btn btn-default" value="Рассчитать"/>
         </form>
 
     </body>
