--- a/templates/calculate.html
+++ b/templates/calculate.html
@@ -17,7 +17,10 @@
         <p style="margin-left: 15px; line-height: 3; font-size: 16px;">
             Расчет сделан для метеостанции с ID <b>{{ station_id }}</b>
             за период с {{ start_date.strftime('%d.%m.%Y')}} по {{ end_date.strftime('%d.%m.%Y') }}
-            за месяцы №{{ selected_months }}.
+            за месяцы:
+            {% for month_num in selected_months %}
+                {{ month_names[month_num - 1] }} ({{ month_num }}){% if loop.index != selected_months|length %}, {% endif %}
+            {% endfor %}
         </p>
 
         <h2 style="margin-left: 15px;">Режимные функции скорости ветра</h2>
