--- a/templates/index.html
+++ b/templates/index.html
@@ -51,48 +51,14 @@
                 <input type="text" placeholder="по" id="to" name="to" required />
             </div>
             <label class="radio-inline all_days" style="margin-left: 15px;">
-                                                            <input type="radio" name="optradio"
-                                                                   id="all_days" checked
-                                                                   value="all_days">Все дни</label>
+                <input type="radio" name="optradio" id="all_days" checked value="all_days">Все дни</label>
             <label class="radio-inline month" style="margin-left: 15px;">
-                                                            <input type="radio" name="optradio"
-                                                                   id="month" value="month">Месяц(ы)</label>
-            <div class="checkbox">
-              <label><input type="checkbox" disabled name="1">Январь</label>
-            </div>
-            <div class="checkbox">
-              <label><input type="checkbox" disabled name="2">Февраль</label>
-            </div>
-            <div class="checkbox">
-              <label><input type="checkbox" disabled name="3">Март</label>
-            </div>
-            <div class="checkbox">
-              <label><input type="checkbox" disabled name="4">Апрель</label>
-            </div>
-            <div class="checkbox">
-              <label><input type="checkbox" disabled name="5">Май</label>
-            </div>
-            <div class="checkbox">
-              <label><input type="checkbox" disabled name="6">Июнь</label>
-            </div>
-            <div class="checkbox">
-              <label><input type="checkbox" disabled name="7">Июль</label>
-            </div>
-            <div class="checkbox">
-              <label><input type="checkbox" disabled name="8">Август</label>
-            </div>
-            <div class="checkbox">
-              <label><input type="checkbox" disabled name="9">Сентябрь</label>
-            </div>
-            <div class="checkbox">
-              <label><input type="checkbox" disabled name="10">Октябрь</label>
-            </div>
-            <div class="checkbox">
-              <label><input type="checkbox" disabled name="11">Ноябрь</label>
-            </div>
-            <div class="checkbox">
-              <label><input type="checkbox" disabled name="12">Декабрь</label>
-            </div>
+                <input type="radio" name="optradio" id="month" value="month">Месяц(ы)</label>
+            {% for month_name in month_names %}
+                <div class="checkbox">
+                    <label><input type="checkbox" disabled name="months" value="{{ loop.index }}">{{ month_name }}</label>
+                </div>
+            {% endfor %}
 
             <div class="page-header" style="margin-left: 15px;">
                 <h5>Введите обеспеченность скорости ветра, <i>%:</i></h5>
